修改vue.config.js和package.json

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-BUILD_FOR_GHPAGE=1
-BUILD_FOR_DJANGO=1
-BUILD_FOR_HTMLPK=1
+BUILD_FOR_GHPAGE=on
+BUILD_FOR_DJANGO=on
+BUILD_FOR_HTMLPK=on
 NODE_ENV=production
 
-2a1b49f0c7de64a2a163cf621ba154cfc573ca6b
+
