--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,5 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Leave this line unchanged
           BRANCH: gh-pages # The branch the action should deploy to.
-          # FOLDER: build # The folder the action should deploy.
+          FOLDER: dist_for_ghpage # The folder the action should deploy.
           CLEAN: true # Automatically remove deleted files from the deploy branch
