Github Page自定义域名配置

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 BUILD_FOR_GHPAGE=on
+BUILD_FOR_GHPAGE_CUSTOM_DOMAIN=on
 BUILD_FOR_DJANGO=on
 BUILD_FOR_HTMLPK=on
-BUILD_FOR=GHPAGE
+BUILD_FOR=GHPAGE_CUSTOM_DOMAIN
 NODE_ENV=production
 
 
