--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@arcgis/core": "^4.18.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
+    "highcharts": "^8.2.2",
+    "highcharts-vue": "^1.3.5",
     "ncp": "^2.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
