--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "@arcgis/core": "^4.18.1",
     "core-js": "^3.6.5",
+    "deep-equal": "^2.0.5",
     "element-ui": "^2.4.5",
     "highcharts": "^8.2.2",
     "highcharts-vue": "^1.3.5",
+    "mockjs": "^1.1.0",
     "ncp": "^2.0.0",
+    "npm": "^6.14.11",
+    "qs": "^6.9.6",
     "vue": "^2.6.11",
+    "vue-json-editor": "^1.4.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
