--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ BUILD_FOR_GHPAGE=on
 BUILD_FOR_GHPAGE_CUSTOM_DOMAIN=on
 BUILD_FOR_DJANGO=on
 BUILD_FOR_HTMLPK=on
-BUILD_FOR=GHPAGE
+BUILD_FOR=HTMLPK
 NODE_ENV=production
 
 
