--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "miss",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://RedFoxAtAsleep.github.io/miss",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -56,6 +57,5 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ],
-  "homepage": "https://RedFoxAtAsleep.github.io/miss"
+  ]
 }
