--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "miss",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://RedFoxAtAsleep.github.io/miss",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -11,15 +10,22 @@
   },
   "dependencies": {
     "@arcgis/core": "^4.18.1",
+    "axios": "^0.21.1",
+    "cesium": "^1.79.1",
+    "copy-webpack-plugin": "^7.0.0",
     "core-js": "^3.6.5",
     "deep-equal": "^2.0.5",
     "element-ui": "^2.4.5",
+    "fbx2gltf": "^0.9.7-p1",
     "highcharts": "^8.2.2",
     "highcharts-vue": "^1.3.5",
+    "http-server": "^0.12.3",
     "mockjs": "^1.1.0",
     "ncp": "^2.0.0",
     "npm": "^6.14.11",
     "qs": "^6.9.6",
+    "three": "^0.125.2",
+    "three-dat.gui": "^2.0.7",
     "vue": "^2.6.11",
     "vue-json-editor": "^1.4.3",
     "vue-router": "^3.2.0",
@@ -31,13 +37,11 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "axios": "^0.18.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-cli-plugin-axios": "^0.0.4",
+    "vue-cli-plugin-cesium": "~1.1.7",
     "vue-cli-plugin-element": "^1.0.1",
-    "vue-cli-plugin-mock": "^1.0.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -57,5 +61,6 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "homepage": "https://RedFoxAtAsleep.github.io/miss"
 }
