--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@arcgis/core": "^4.18.1",
     "axios": "^0.21.1",
     "cesium": "^1.79.1",
-    "copy-webpack-plugin": "^7.0.0",
     "core-js": "^3.6.5",
     "deep-equal": "^2.0.5",
     "element-ui": "^2.4.5",
@@ -27,6 +26,7 @@
     "three": "^0.125.2",
     "three-dat.gui": "^2.0.7",
     "vue": "^2.6.11",
+    "vue-cli-plugin-cesium": "^1.1.7",
     "vue-json-editor": "^1.4.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -40,7 +40,6 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-cli-plugin-cesium": "~1.1.7",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   },
